pagi css gap fix

--- a/client/src/enchantment/enchantment-style.scss
+++ b/client/src/enchantment/enchantment-style.scss
@@ -1089,3 +1089,7 @@ input[type='radio'].selector {
     opacity: 1 !important;
   }
 }
+
+.ss-gridfield-configurable-paginator .pagination-page-size-select {
+  margin-left: 10px !important;
+}
